# hotspot-analysis

./: .gitignore  CONTEXT.md  PRD Code Hotspot Analysis Tool.md  README.md  install.sh  main.py  pyproject.toml  repos.sample.yaml  repos.yaml  requirements.txt  sample-repos.txt
docs/adr/: 0001-yaml-config-file.md
git_analyzer/: fetch_churn.py  repo_list.py
hotspot/: __main__.py  config.py  main.py
hotspot-report/: index.html
hotspot-report/gcms-bo-account/: ranked.csv  ranked.md
hotspot-report/gcms-bo-activity/: ranked.csv  ranked.md
hotspot-report/gcms-bo-auth/: ranked.csv  ranked.md
hotspot-report/gcms-bo-branch/: ranked.csv  ranked.md
hotspot-report/gcms-bo-content/: ranked.csv  ranked.md
hotspot-report/gcms-bo-customer/: ranked.csv  ranked.md
hotspot-report/gcms-bo-domain/: ranked.csv  ranked.md
hotspot-report/gcms-bo-email-notification/: ranked.csv  ranked.md
hotspot-report/gcms-bo-entitlement/: ranked.csv  ranked.md
hotspot-report/gcms-bo-feedback/: ranked.csv  ranked.md
hotspot-report/gcms-bo-inbox/: ranked.csv  ranked.md
hotspot-report/gcms-bo-instruction/: ranked.csv  (+1 more)
hotspot-report/gcms-bo-instruction-event-adaptor/: ranked.csv  ranked.md
hotspot_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models/: data.py
report/: aggregate.py  png_report.py
scorer/: aggregate.py  rank.py
tests/: test_absolute_threshold.py  test_aggregate.py  test_consolidated.py  test_git_churn.py  test_git_files.py  test_global_normalization.py  test_lizard_complexity.py  test_repo_list.py  test_report.py  test_scorer.py  test_smoke.py
(+120 files in other folders)
