[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hotspot-analysis"
version = "0.2.0"
description = "Code hotspot analysis tool — identifies files that are both high-churn and high-complexity"
requires-python = ">=3.10"
dependencies = [
    "lizard>=1.16.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["hotspot*"]
